--- a/ZenBiz/AppModules/RDLC/sold-items.rdlc
+++ b/ZenBiz/AppModules/RDLC/sold-items.rdlc
@@ -844,7 +844,7 @@
                 <Paragraph>
                   <TextRuns>
                     <TextRun>
-                      <Value>Sold Items </Value>
+                      <Value>Sold Items/Services </Value>
                       <Style>
                         <FontFamily>arial</FontFamily>
                         <FontSize>16pt</FontSize>
@@ -918,7 +918,7 @@
               </Paragraphs>
               <rd:DefaultName>Textbox1</rd:DefaultName>
               <Height>1.89646cm</Height>
-              <Width>6.51848cm</Width>
+              <Width>8.92619cm</Width>
               <Style>
                 <Border>
                   <Style>None</Style>
